--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,19 @@
     package="pt.ipca.androidbookdwm">
 
     <application
+        android:name=".BookManagerApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.CreateUserActivity"></activity>
+
+        <activity
+            android:name=".activities.MainActivity"
+            android:label="@string/title_activity_main"/>
+
+        <activity android:name=".activities.CreateUserActivity" />
         <activity android:name=".activities.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
